<resources>
    <string name="app_name">FilmsLocaror</string>
    <string name="app_name_j">FilmsLocaror_J</string>
    <string name="disclaimer">Картинки взяты с https://www.movieposters.com/</string>
    <string name="btn_menu">Меню</string>
    <!-- Menu -->
    <string name="menu_home_title_text">На главный экран</string>
    <string name="menu_favorits_title_text">Избранное</string>
    <string name="menu_seelater_title_text">Посмотреть позже</string>
    <string name="menu_casts_title_text">Подборки</string>
    <string name="menu_settings_title_text">Настройки</string>
    <string name="page_title">Поиск</string>

    <string name="radio_button_popular">Популярные</string>
    <string name="radio_button_top_rated">Топ</string>
    <string name="radio_button_upcoming">Скоро</string>
    <string name="radio_button_playing">В кинотеатрах</string>
    <string name="radio_group_header">Подборка на главном экране:</string>

    <string name="radio_group_theme">Тема</string>
    <string name="radio_button_light">Светлая</string>
    <string name="radio_button_dark">Темная</string>

    <string name="eval_label">Пробный период окончился, пора приобретать полнофункциональную версию программы.</string>



    <string name="mode_day">Поиск</string>
    <string name="mode_night">Поиск</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="alert_2clickToExit">Нажмите дважды для выхода.</string>
    <string name="alert_tellToFriends">Поделюсь с друзьями</string>

    <string name="permission_storage">Нет разрешения. Пожалуйста, предоставьте разрешение</string>
    <string name="downloaded_to_gallery">"Сохранено в галерею"</string>
    <string name="open">В галерею</string>
    <string name="clear_all_reminders">Очистить все</string>


</resources>